--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="nav-top">
 
-            <div class="logo">Sneakers</div>
+            <div class="logo">ShoeClue</div>
            <div class="search-bar"><input type="text" class="search" placeholder="Search..."> <img src="images/icons8-search-50.png" width="20" height="20" alt=""></div> 
             <div class="offer">Limited Offer!</div>
         </div>
